# wasm-calculator

./: .gitignore  CMakeLists.txt  README.md  build.sh
calculator/: CMakeLists.txt  wasm_calculator.htm
calculator/include/: calculator.h
calculator/src/: bindings.cpp  calculator.cpp  version.h.in
test/: CMakeLists.txt  test.htm  test.js
test/mocha/: update_mocha.sh
